@@ -46,8 +46,8 @@ import org.keycloak.models.OAuth2DeviceConfig;
 import org.keycloak.models.OTPPolicy;
 import org.keycloak.models.ParConfig;
 import org.keycloak.models.PasswordPolicy;
-import org.keycloak.models.RequiredActionConfigModel;
 import org.keycloak.models.RealmModel;
+import org.keycloak.models.RequiredActionConfigModel;
 import org.keycloak.models.RequiredActionProviderModel;
 import org.keycloak.models.RequiredCredentialModel;
 import org.keycloak.models.WebAuthnPolicy;
@@ -78,6 +78,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
     protected boolean organizationsEnabled;
     protected boolean adminPermissionsEnabled;
     protected boolean verifiableCredentialsEnabled;
+    protected boolean scimApiEnabled;
     //--- brute force settings
     protected boolean bruteForceProtected;
     protected boolean permanentLockout;
@@ -89,6 +90,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
     protected long quickLoginCheckMilliSeconds;
     protected int maxDeltaTimeSeconds;
     protected int failureFactor;
+    protected int maxSecondaryAuthFailures;
     //--- end brute force settings
 
     protected String defaultSignatureAlgorithm;
@@ -112,8 +114,6 @@ public class CachedRealm extends AbstractExtendableRevisioned {
     protected int accessCodeLifespanUserAction;
     protected int accessCodeLifespanLogin;
     protected LazyLoader<RealmModel, OAuth2DeviceConfig> deviceConfig;
-    protected LazyLoader<RealmModel, CibaConfig> cibaConfig;
-    protected LazyLoader<RealmModel, ParConfig> parConfig;
     protected int actionTokenGeneratedByAdminLifespan;
     protected int actionTokenGeneratedByUserLifespan;
     protected int notBefore;
@@ -178,7 +178,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
     protected Map<String, Map<String,String>> realmLocalizationTexts;
 
-    public CachedRealm(Long revision, RealmModel model) {
+    public CachedRealm(long revision, RealmModel model) {
         super(revision, model.getId());
         name = model.getName();
         displayName = model.getDisplayName();
@@ -197,6 +197,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         organizationsEnabled = model.isOrganizationsEnabled();
         adminPermissionsEnabled = model.isAdminPermissionsEnabled();
         verifiableCredentialsEnabled = model.isVerifiableCredentialsEnabled();
+        scimApiEnabled = model.isScimApiEnabled();
         //--- brute force settings
         bruteForceProtected = model.isBruteForceProtected();
         permanentLockout = model.isPermanentLockout();
@@ -208,6 +209,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         quickLoginCheckMilliSeconds = model.getQuickLoginCheckMilliSeconds();
         maxDeltaTimeSeconds = model.getMaxDeltaTimeSeconds();
         failureFactor = model.getFailureFactor();
+        maxSecondaryAuthFailures = model.getMaxSecondaryAuthFailures();
         //--- end brute force settings
 
         defaultSignatureAlgorithm = model.getDefaultSignatureAlgorithm();
@@ -229,8 +231,6 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         accessTokenLifespanForImplicitFlow = model.getAccessTokenLifespanForImplicitFlow();
         accessCodeLifespan = model.getAccessCodeLifespan();
         deviceConfig = new DefaultLazyLoader<>(OAuth2DeviceConfig::new, null);
-        cibaConfig = new DefaultLazyLoader<>(CibaConfig::new, null);
-        parConfig = new DefaultLazyLoader<>(ParConfig::new, null);
         accessCodeLifespanUserAction = model.getAccessCodeLifespanUserAction();
         accessCodeLifespanLogin = model.getAccessCodeLifespanLogin();
         actionTokenGeneratedByAdminLifespan = model.getActionTokenGeneratedByAdminLifespan();
@@ -247,7 +247,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         emailTheme = model.getEmailTheme();
 
         requiredCredentials = model.getRequiredCredentialsStream().collect(Collectors.toList());
-        userActionTokenLifespans = Collections.unmodifiableMap(new HashMap<>(model.getUserActionTokenLifespans()));
+        userActionTokenLifespans = Map.copyOf(model.getUserActionTokenLifespans());
 
         smtpConfig = model.getSmtpConfig();
         browserSecurityHeaders = model.getBrowserSecurityHeaders();
@@ -292,11 +292,11 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
         authenticatorConfigs = model.getAuthenticatorConfigsStream()
                 .collect(Collectors.toMap(AuthenticatorConfigModel::getId, Function.identity()));
-        List<RequiredActionConfigModel> requiredActionConfigsList = model.getRequiredActionConfigsStream().collect(Collectors.toList());
-        for (RequiredActionConfigModel requiredActionConfig : requiredActionConfigsList) {
-            requiredActionProviderConfigs.put(requiredActionConfig.getId(), requiredActionConfig);
-            requiredActionProviderConfigsByAlias.put(requiredActionConfig.getAlias(), requiredActionConfig);
-        }
+        model.getRequiredActionConfigsStream()
+                .forEach(requiredActionConfig -> {
+                    requiredActionProviderConfigs.put(requiredActionConfig.getId(), requiredActionConfig);
+                    requiredActionProviderConfigsByAlias.put(requiredActionConfig.getAlias(), requiredActionConfig);
+                });
 
         requiredActionProviderList = model.getRequiredActionProvidersStream().collect(Collectors.toList());
         for (RequiredActionProviderModel action : requiredActionProviderList) {
@@ -320,7 +320,7 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         model.getComponentsStream().forEach(component ->
             componentsByParent.add(component.getParentId(), component)
         );
-        components = model.getComponentsStream().collect(Collectors.toMap(component -> component.getId(), Function.identity()));
+        components = model.getComponentsStream().collect(Collectors.toMap(ComponentModel::getId, Function.identity()));
 
         try {
             attributes = model.getAttributes();
@@ -412,6 +412,10 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
     public int getFailureFactor() {
         return failureFactor;
+    }
+
+    public int getMaxSecondaryAuthFailures() {
+        return maxSecondaryAuthFailures;
     }
 
     public boolean isVerifyEmail() {
@@ -531,12 +535,12 @@ public class CachedRealm extends AbstractExtendableRevisioned {
         return deviceConfig.get(session, modelSupplier);
     }
 
-    public CibaConfig getCibaConfig(KeycloakSession session, Supplier<RealmModel> modelSupplier) {
-        return cibaConfig.get(session, modelSupplier);
+    public CibaConfig getCibaConfig(Supplier<RealmModel> modelSupplier) {
+        return CibaConfig.fromCache(modelSupplier, Collections.unmodifiableMap(attributes));
     }
 
-    public ParConfig getParConfig(KeycloakSession session, Supplier<RealmModel> modelSupplier) {
-        return parConfig.get(session, modelSupplier);
+    public ParConfig getParConfig(Supplier<RealmModel> modelSupplier) {
+        return ParConfig.fromCache(modelSupplier, Collections.unmodifiableMap(attributes));
     }
 
     public int getActionTokenGeneratedByAdminLifespan() {
@@ -768,5 +772,9 @@ public class CachedRealm extends AbstractExtendableRevisioned {
 
     public Map<String, RequiredActionConfigModel> getRequiredActionProviderConfigs() {
         return requiredActionProviderConfigs;
+    }
+
+    public boolean isScimApiEnabled() {
+        return scimApiEnabled;
     }
 }
