@@ -1,22 +1,26 @@
 package org.keycloak.authentication.authenticators.client;
 
-import org.keycloak.authentication.ClientAuthenticationFlowContext;
-import org.keycloak.services.Urls;
-
 import java.util.Collections;
 import java.util.List;
+
+import org.keycloak.authentication.ClientAuthenticationFlowContext;
+import org.keycloak.services.Urls;
 
 public class FederatedJWTClientValidator extends AbstractJWTClientValidator {
 
     private final String expectedTokenIssuer;
     private final int allowedClockSkew;
     private final boolean reusePermitted;
+    private int maximumExpirationTime = 300;
+    private final List<String> validAudiences;
 
-    public FederatedJWTClientValidator(ClientAuthenticationFlowContext context, SignatureValidator signatureValidator, String expectedTokenIssuer, int allowedClockSkew, boolean reusePermitted) throws Exception {
+    public FederatedJWTClientValidator(ClientAuthenticationFlowContext context, SignatureValidator signatureValidator,
+            String expectedTokenIssuer, int allowedClockSkew, boolean reusePermitted, String... validAudiences) throws Exception {
         super(context, signatureValidator, null);
         this.expectedTokenIssuer = expectedTokenIssuer;
         this.allowedClockSkew = allowedClockSkew;
         this.reusePermitted = reusePermitted;
+        this.validAudiences = validAudiences == null ? Collections.emptyList() : List.of(validAudiences);
     }
 
     @Override
@@ -26,7 +30,9 @@ public class FederatedJWTClientValidator extends AbstractJWTClientValidator {
 
     @Override
     protected List<String> getExpectedAudiences() {
-        return Collections.singletonList(Urls.realmIssuer(context.getUriInfo().getBaseUri(), realm.getName()));
+        return validAudiences.isEmpty()
+                ? List.of(Urls.realmIssuer(context.getUriInfo().getBaseUri(), realm.getName()))
+                : validAudiences;
     }
 
     @Override
@@ -41,7 +47,11 @@ public class FederatedJWTClientValidator extends AbstractJWTClientValidator {
 
     @Override
     protected int getMaximumExpirationTime() {
-        return 300; // TODO Hard-coded for now, but should be configurable
+        return maximumExpirationTime;
+    }
+
+    public void setMaximumExpirationTime(int maximumExpirationTime) {
+        this.maximumExpirationTime = maximumExpirationTime;
     }
 
     @Override
